--- a/lgsm/config-default/config-lgsm/cffserver/_default.cfg
+++ b/lgsm/config-default/config-lgsm/cffserver/_default.cfg
@@ -14,7 +14,7 @@ port="7777"
 timelimit="10"
 
 ## Server Parameters | https://docs.linuxgsm.com/configuration/start-parameters#additional-parameters
-startparameters="Citadel ${defaultmap}?Game=${gametype}?TimeLimit=${timelimit} -port=${port}"
+#startparameters="Citadel ${defaultmap}?Game=${gametype}?TimeLimit=${timelimit} -port=${port}"
 
 #### LinuxGSM Settings ####
 
@@ -141,10 +141,10 @@ glibc="2.17"
 # Edit with care
 
 ## Game Server Directories
-systemdir="${serverfiles}/LinuxServer"
-executabledir="${systemdir}/Engine/Binaries/Linux"
+systemdir="${serverfiles}/Citadel"
+executabledir="${systemdir}/Binaries/Linux"
 executable="./CitadelServer-Linux-Shipping"
-servercfgdir="${systemdir}/UnrealTournament/Saved/Config/LinuxServer"
+servercfgdir="${systemdir}/Saved/Config/LinuxServer"
 servercfg="Game.ini"
 servercfgdefault="Game.ini"
 servercfgfullpath="${servercfgdir}/${servercfg}"
