--- a/lgsm/config-default/config-lgsm/cffserver/_default.cfg
+++ b/lgsm/config-default/config-lgsm/cffserver/_default.cfg
@@ -6,6 +6,7 @@
 # common.cfg - applies settings to every instance.
 # [instance].cfg - applies settings to a specific instance.
 
+appid=489650
 #### Game Server Settings ####
 
 ## Predefined Parameters | https://docs.linuxgsm.com/configuration/start-parameters
