Copy SteamCMD section

--- a/lgsm/config-default/config-lgsm/cffserver/_default.cfg
+++ b/lgsm/config-default/config-lgsm/cffserver/_default.cfg
@@ -6,7 +6,6 @@
 # common.cfg - applies settings to every instance.
 # [instance].cfg - applies settings to a specific instance.
 
-appid=489650
 #### Game Server Settings ####
 
 ## Predefined Parameters | https://docs.linuxgsm.com/configuration/start-parameters
@@ -101,6 +100,16 @@ querydelay="1"
 ansi="on"
 
 #### Advanced Settings ####
+
+## SteamCMD Settings | https://docs.linuxgsm.com/steamcmd
+# Server appid
+appid="489650"
+steamcmdforcewindows="no"
+# SteamCMD Branch | https://docs.linuxgsm.com/steamcmd/branch
+branch=""
+betapassword=""
+# Master Server | https://docs.linuxgsm.com/steamcmd/steam-master-server
+steammaster="false"
 
 ## Message Display Time | https://docs.linuxgsm.com/features/message-display-time
 sleeptime="0.5"
